2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Avoid multi-line
	`//'-style comments. (reported by C. Joslin)

	* lib/include/cstddef.h: Do not define `NULL' if it is already
	defined (requested by C. Joslin).

	* lib/src/gfx.c: Use proper `printf' format modifiers.

	* lib/src/mtclock.c: Define `shutup_ctime_h' to avoid warnings in
	`ctime.h'.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New default MT profile that provides multiple places.

	This is required by `make check' in the `programs' package since
	the `mandel' benchmark requires at least two 1-core places.
	
	* tools/lib/mt-profiles/rmb8: New.
	* tools/lib/mt-profiles/default: Alias `rmb8'.

	* tools/lib/Makefile.am: Update accordingly.
	
2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase portability of the run script in execution packages.

	* tools/lib/r-mt-sim.sh.in: The script `run.sh' requires Bash, so
	mention that explicitely so that the script can be copied to a
	different system where `/bin/sh' is not bash. Also allow to
	override the MT simulator with an environment variable during
	re-play.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/slc.m4: Also set `TMO' to the location of the
	`timeout' script.

2009-12-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr' and `cce' for more flexibility.
	
	* tools/bin/slr.in: New parameter `-b' to specify the `cce' tag to
	use when compiling input data. Re-order stages to allow compiling
	Fibre data without a valid program executable when `-b' is
	specified.

	* tools/bin/cce.in: Recognize `mtalpha' and `mtsparc' as
	single-word aliases.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Also use the new `slr -p' feature with `slt'.
	
	* tools/bin/slt.in: Invoke `slr' with `-p'. 

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes in scripts.

	* tools/bin/timeout.in,